langtools/test/tools/apt/Compile/golden.txt
error: It's a mad, mad, mad, mad world
error: Something wicked this way comes
HelloWorld.java:2: Boring class name
public class HelloWorld {
       ^
3 errors
